# learn_ros2_control

./: .gitignore  .gitmodules  README.md
.cache/clangd/index/: rrbot.cpp.CF9DAA6A6FCAA1E3.idx  rrbot.hpp.9A7B5976414845DD.idx
1_rrbot_ws/: ros2_control_cli.md  ros_team_workspace.md
1_rrbot_ws/install/: local_setup.sh  setup.sh
1_rrbot_ws/log/: latest_build  latest_test  latest_test-result
1_rrbot_ws/my_hardwareinterfaces/: CMakeLists.txt  my_hardwareinterfaces.xml
1_rrbot_ws/my_hardwareinterfaces/src/: rrbot_hardware_interface.cpp
1_rrbot_ws/my_rrbot/: sim_to_real.md
1_rrbot_ws/my_rrbot/my_hardwareinterfaces/: CMakeLists.txt  package.xml
1_rrbot_ws/my_rrbot/rrbot_bringup/: CMakeLists.txt  package.xml
1_rrbot_ws/my_rrbot/rrbot_description/: CMakeLists.txt  package.xml
examples/install/: local_setup.sh  setup.sh
examples/log/: latest_build
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
steering_chassis_ws/src/steering_chassis_bringup/: CMakeLists.txt  package.xml
steering_chassis_ws/src/steering_wheel_description/: CMakeLists.txt  README.md  package.xml
steering_chassis_ws/src/steering_wheel_description/launch/: view_steering_wheel.launch.py
steering_chassis_ws/src/steering_wheel_description/test/: steering_wheel_test_urdf_xacro.py
steering_chassis_ws/src/steering_wheel_description/urdf/: steering_wheel.urdf.xacro
steering_chassis_ws/src/steering_wheel_description/urdf/steering_wheel/: steering_wheel_macro.ros2_control.xacro  steering_wheel_macro.xacro
(+150 files in other folders)
